--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lucide-react": "^0.555.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
